--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,15 @@
 <html>
   <head>
     <title>Hack</title>
+    <meta name="viewport" content="width=375" >
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
+  <%= stylesheet_pack_tag 'main' %>
   </head>
 
   <body>
     <%= yield %>
+      <%= javascript_pack_tag 'application' %>
   </body>
 </html>
