--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,8 +1,4 @@
 <div id="app">
-
-<h1>Students#show</h1>
-<p>Find me in app/views/students/show.html.erb</p>
-
-<%= current_student.email %>
-<navbar></navbar>
+<student-show></student-show>
 </div>
+
