Vuetify導入完了,toolbarまで

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=375" >
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+     <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="    stylesheet">
   <%= stylesheet_pack_tag 'main' %>
   </head>
 
