--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,4 +1,13 @@
-<div id="app">
-<student-show></student-show>
-</div>
+<script>
+rails = window.rails = {};
+rails.students = <%= raw @students.to_json %>;
+rails.student = <%= raw @student.to_json %>;
+console.log(rails.students);
+console.log(rails.student);
+</script>
 
+<div id="app">
+  <navbar>
+  </navbar>
+    <router-view></router-view>
+</div>
