ログインcomp作った

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -2,7 +2,7 @@
 rails = window.rails = {};
 rails.students = <%= raw @students.to_json %>;
 rails.student = <%= raw current_student.to_json %>;
-login = rails.student == null
+login = rails.student !== null
 console.log(login)
 </script>
 
