--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -2,8 +2,8 @@
 rails = window.rails = {};
 rails.students = <%= raw @students.to_json %>;
 rails.student = <%= raw current_student.to_json %>;
+events = <%= raw @events.to_json %>;
 login = rails.student !== null
-console.log(login)
 </script>
 
 <div id="app">
