無限ループ解消

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,9 +1,10 @@
 <script>
 rails = window.rails = {};
 rails.students = <%= raw @students.to_json %>;
-rails.student = <%= raw current_student.to_json %>;
+rails.student = <%= raw @student.to_json %>;
 events = <%= raw @events.to_json %>;
 login = rails.student !== null
+my_events = <%= raw @my_events.to_json %>;
 rails.event_students = <%= raw @event_students.to_json %>;
 rails.event_ids = <%= raw @event_ids.to_json %>;
  console.log(rails.event_students)
