--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -14,4 +14,15 @@ rails.event_ids = <%= raw @event_ids.to_json %>;
 <div id="app">
   <navbar>
   </navbar>
+
 </div>
+<% if !current_student.image.attached? %>
+  <%= form_with model: current_student, local: true do |f| %>
+<%= f.file_field :image %><br>
+<%= f.submit %>
+<% end %>
+<% end %>
+
+<% if current_student.image.attached? %>
+  <%= image_tag current_student.image,size: "40x40" %>
+  <% end %>
