ログイン後にblobがnilになる現象を解決

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -9,7 +9,11 @@ rails.event_students = <%= raw @event_students.to_json %>;
 rails.event_ids = <%= raw @event_ids.to_json %>;
  console.log(rails.event_students)
  console.log(rails.event_ids)
- blob_url = <%= raw rails_blob_url(@student.image).to_json %>
+
+ blob_url = '<%if @student.image.attached? %><%= raw rails_blob_url(@student.image).to_json %><% end %>'
+
+join_students = <%= raw @join_students.to_json %>
+
 
 
 </script>
