--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -10,7 +10,7 @@ rails.event_ids = <%= raw @event_ids.to_json %>;
  console.log(rails.event_students)
  console.log(rails.event_ids)
 
-blob_url = '<%if @student.image.attached? %><%= raw rails_blob_url(@student.image).to_json %><% end %>'
+blob_url = <%if @student.image.attached? %><%= raw rails_blob_url(@student.image).to_json %><% else %><%= raw asset_url("no-image.jpeg").to_json%><% end %>
 
 join_students = <%= raw @join_students.to_json %>
 
@@ -29,7 +29,3 @@ console.log(blob_url)
 <%= f.submit %>
 <% end %>
 <% end %>
-
-<% if current_student.image.attached? %>
-  <%= image_tag current_student.image, size: "40x40" %>
-  <% end %>
