--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -10,6 +10,8 @@ login = rails.student !== null
 my_events = <%= raw @my_events.to_json %>;
 rails.event_students = <%= raw @event_students.to_json %>;
 rails.event_ids = <%= raw @event_ids.to_json %>;
+teams = <%= raw @teams.to_json %>;
+console.log(teams)
 
 
  console.log(rails.event_students)
