--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,9 +13,9 @@ join_students = <%= raw @join_students.to_json %>
 </script>
 
 <div id="app">
-  <navbar>
-  </navbar>
+  <navbar/>
 </div>
 <style>
 
 </style>
+
